2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix perl warnings.

2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Changers.pm, perl/Amanda/Rest/Configs.pm,
	  perl/Amanda/Rest/Storages.pm: Parse multiple fields.

2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Always set argument.host

2014-10-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Improve JSON escaping code.

2014-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c: Handle 'x ' lines on stderr for bsdtar
	  restore.

2014-10-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Message.pm: Add Amanda::Extensions::Message

2014-10-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/FetchDump.pm: log pid-done line.
	* perl/Amanda/Rest/Runs.pm: Handle fork from rest server.
	* server-src/logfile.c: log pid line with pname.

2014-10-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Curinfo/Info.pm: Fix perl warning.

2014-10-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix perl warning.

2014-10-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Curinfo.pm (get_dle_info): New method.
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Add
	  get '/amanda/v1.0/configs/:CONF/dles/hosts/:HOST'
	* perl/Amanda/Rest/Dles.pm (info): New method.

2014-10-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amanda-rest-server.pl: Typo.
	* perl/Amanda/Status.pm: Fix.

2014-10-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Set nb_tape to 0.
	* server-src/amanda-rest-server.pl: print "Stoped the Amanda Rest
	  Server".

2014-10-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/FetchDump.pm: $self->{'message_file'}->autoflush,
	  Return $params{'finished_cb'}->(1);
	* perl/Amanda/Rest/Runs.pm: Add '=' to dumpspec argument.
